# stereo-field-compressor

./: .gitignore  CMakeLists.txt  README.md
Source/: ConeCompressor.cpp  ConeCompressor.h  ConeWindow.cpp  ConeWindow.h  PluginEditor.cpp  PluginEditor.h  PluginProcessor.cpp  PluginProcessor.h  SpatialDetector.cpp  SpatialDetector.h
scripts/: sign-and-notarize.sh  standalone.entitlements
